--- a/package.json
+++ b/package.json
@@ -8,15 +8,14 @@
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service build --mode test",
     "prod": "vue-cli-service build --mode prod",
-    "dev": "vue-cli-service build --mode dev",
-    "pre": "vue-cli-service build --mode pre"
+    "pre": "vue-cli-service build --mode pre",
+    "dev": "vue-cli-service build --mode dev"
   },
   "dependencies": {
     "axios": "^0.18.1",
     "bootstrap": "^3.4.1",
     "codemirror": "^5.37.0",
     "easemob-websdk": "^1.8.3",
-    "echarts": "^4.4.0",
     "element-ui": "^2.13.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
@@ -26,8 +25,8 @@
     "strophe.js": "^1.2.16",
     "summernote": "^0.8.1",
     "vue": "^2.6.6",
-    "vue-amap": "^0.5.10",
     "vue-axios": "^2.1.4",
+    "vue-cropperjs": "^4.0.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
